Dynegy/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ALL_IN_Price__c</fullName>
        <label>Total All-In Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ANCILLARY_SERVICES_CONTRACT_PRICE__c</fullName>
        <formula>IF( Product_Name__c = &apos;FP-MULT&apos;|| Product_Name__c =&apos;FP-MULT-PT-C&apos;|| Product_Name__c =&apos;FP-MULT-PT-L&apos;|| Product_Name__c =&apos;FP-MULT-PT-T&apos;|| Product_Name__c = &apos;FP-MULT-PT-CL&apos;|| Product_Name__c = &apos;FP-MULT-PT-CLT&apos;|| Product_Name__c =&apos;FP-MULT-PT-LT&apos;|| Product_Name__c = &apos;FP-MULT-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-C&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CL&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-L&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-T&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-LT&apos; 
,TEXT((ISO_Other_Trans__c+ISO_ARR__c+ ISO_Ancillaries__c+ISO_Losses__c+ ISO_Op_Reserve_RSG__c+ISO_Cost_Recovery__c+ISO_Inadvertant__c+ISO_SSR_RMR__c+ISO_Admin__c+ISO_FTR__c)/1000),&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ANCILLARY SERVICES CONTRACT PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Audit_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account Setup Audit Sheet is in Place.</description>
        <inlineHelpText>Account Setup Audit Sheet is in Place.</inlineHelpText>
        <label>Account Setup Audit Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Complete__c</fullName>
        <description>Account Setup will indicate the date the contract was validated and it was successfully received in Lodestar.</description>
        <inlineHelpText>Account Setup will indicate the date the contract was validated and it was successfully received in Lodestar.</inlineHelpText>
        <label>Account Setup Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This contract was being tracked on the Excel spreadsheet.</description>
        <inlineHelpText>This contract was being tracked on the Excel spreadsheet.</inlineHelpText>
        <label>Account Setup Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Legal_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Date the Legal Notice was Completed</description>
        <inlineHelpText>Date the Legal Notice was Completed</inlineHelpText>
        <label>Account Setup Legal Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Notes__c</fullName>
        <description>Account Setup Notes</description>
        <inlineHelpText>Account Setup Notes</inlineHelpText>
        <label>Account Setup Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person in Account Setup validating the contract</description>
        <inlineHelpText>Person in Account Setup validating the contract</inlineHelpText>
        <label>Account Setup Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Support_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supporting Document Added to Folder</description>
        <inlineHelpText>Supporting Document Added to Folder</inlineHelpText>
        <label>Account Setup Support Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
                <value>
                    <fullName>Renewal Sent</fullName>
                </value>
                <value>
                    <fullName>Renewal Rejected</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Addtl_Vol_REC_Charge_CONTRACT_PRICE__c</fullName>
        <formula>IF( Product_Name__c =&apos;FP-ONE-PT-C&apos;|| Product_Name__c = &apos;FP-MULT&apos;|| Product_Name__c =&apos;FP-MULT-PT-C&apos;|| Product_Name__c = &apos;FP-MULT-PT-L&apos;|| Product_Name__c = &apos;FP-MULT-PT-T&apos;|| Product_Name__c = &apos;FP-MULT-PT-CL&apos;|| Product_Name__c = &apos;FP-MULT-PT-CLT&apos;|| Product_Name__c = &apos;FP-MULT-PT-LT&apos;|| Product_Name__c = &apos;FP-MULT-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-C&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CL&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-L&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-T&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-LT&apos; ,TEXT((Vol_Rec__c)/1000),&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addtl Vol REC Charge CONTRACT PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Fee__c</fullName>
        <formula>Broker_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ancillary_Service__c</fullName>
        <formula>ISO_ARR__c  +  ISO_Ancillaries__c  +  ISO_Losses__c  +  ISO_Op_Reserve_RSG__c  +  ISO_Cost_Recovery__c  +  ISO_Inadvertant__c  +  ISO_SSR_RMR__c  +  ISO_Admin__c  +  ISO_FTR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ancillary Service</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Method__c</fullName>
        <label>Bill Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUAL</fullName>
                </value>
                <value>
                    <fullName>Rate Ready</fullName>
                </value>
                <value>
                    <fullName>Bill Ready</fullName>
                </value>
                <value>
                    <fullName>SBO/ESP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <label>Broker Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Fee_divide__c</fullName>
        <formula>Broker_Fee__c  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Fee divide</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAPACITY_CONTRACT_PRICE__c</fullName>
        <formula>IF(Product_Name__c =&apos;FP-MULT&apos;|| Product_Name__c = &apos;FP-MULT-PT-L&apos;|| Product_Name__c =  &apos;FP-MULT-PT-T&apos;|| Product_Name__c =  &apos;FP-MULT-PT-LT&apos;|| Product_Name__c = &apos;FP-ONOFF&apos;|| Product_Name__c = &apos;FP-ONOFF-PT-T&apos;|| Product_Name__c = &apos;FP-ONOFF-PT-L&apos;|| Product_Name__c = &apos;FP-ONOFF-PT-LT&apos;,TEXT((Capacity__c)/1000),

IF(Product_Name__c =&apos;FP-ONE-PT-C&apos;|| Product_Name__c =&apos;FP-MULT-PT-C&apos;|| Product_Name__c = &apos;FP-MULT-PT-CL&apos;|| Product_Name__c = &apos;FP-MULT-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CL&apos;|| Product_Name__c = &apos;FP-MULT-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-C&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CT&apos;,&apos;pass thru&apos;,&apos;N/A&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPACITY CONTRACT PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Price__c</fullName>
        <formula>Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Broker_Fee__c</fullName>
        <label>Contract Broker Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Comments__c</fullName>
        <label>Contract Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Counter_Signed_Date__c</fullName>
        <label>Contract Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Index_Margin__c</fullName>
        <label>Contract Index Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Margin__c</fullName>
        <label>Contract Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Marketing_Cost__c</fullName>
        <label>Contract Marketing Cost</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Municipality_Fee__c</fullName>
        <label>Contract Municipality Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Price_Comments__c</fullName>
        <label>Contract Price Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Price__c</fullName>
        <formula>Retail_Quote__r.Quote_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fixed Price/MWH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UCBNONPOR</fullName>
                </value>
                <value>
                    <fullName>IEC</fullName>
                </value>
                <value>
                    <fullName>TIER_1_2</fullName>
                </value>
                <value>
                    <fullName>TIER_A</fullName>
                </value>
                <value>
                    <fullName>UCBPOR</fullName>
                </value>
                <value>
                    <fullName>UCBPOR_BR</fullName>
                </value>
                <value>
                    <fullName>WESA</fullName>
                </value>
                <value>
                    <fullName>GFEC</fullName>
                </value>
                <value>
                    <fullName>Small Stable Contract - Evergreen</fullName>
                </value>
                <value>
                    <fullName>Small Stable Contract - MTM Renewal</fullName>
                </value>
                <value>
                    <fullName>Large Stable Contract</fullName>
                </value>
                <value>
                    <fullName>Large Stable PT-C Contract</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Block and Index</fullName>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTRIBUTION_LOSSES_CONTRACT_PRICE__c</fullName>
        <formula>IF( Product_Name__c = &apos;FP-MULT&apos;|| Product_Name__c =  &apos;FP-MULT-PT-C&apos;|| Product_Name__c =  &apos;FP-MULT-PT-T&apos;|| Product_Name__c =  &apos;FP-MULT-PT-CT&apos;|| Product_Name__c = &apos;FP-ONOFF&apos;|| Product_Name__c = &apos;FP-ONOFF-PT-C&apos;|| Product_Name__c = &apos;FP-ONOFF-PT-T&apos;|| Product_Name__c = &apos;FP-ONOFF-PT-CT&apos;  ,TEXT((Utility_Loss__c)/1000),

IF( Product_Name__c =&apos;FP-MULT-PT-L&apos;|| Product_Name__c =&apos;FP-MULT-PT-LT&apos;|| Product_Name__c =&apos;FP-MULT-PT-CL&apos;|| Product_Name__c =&apos;FP-MULT-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CL&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-L&apos;|| Product_Name__c = &apos;FP-ONOFF-PT-LT&apos;,&apos;pass thru&apos;, &apos;N/A&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DISTRIBUTION LOSSES CONTRACT PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Risk__c</fullName>
        <label>Default Risk</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distribution_Loss__c</fullName>
        <formula>Utility_Loss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Loss</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENERGY_PRICE_ADDER_CONTRACT_PRICE__c</fullName>
        <formula>IF( Product_Name__c = &apos;FP-MULT&apos;|| Product_Name__c =&apos;FP-MULT-PT-C&apos;|| Product_Name__c = &apos;FP-MULT-PT-L&apos;|| Product_Name__c = &apos;FP-MULT-PT-T&apos;|| Product_Name__c =&apos;FP-MULT-PT-CL&apos;|| Product_Name__c = &apos;FP-MULT-PT-CLT&apos;|| Product_Name__c = &apos;FP-MULT-PT-LT&apos;|| Product_Name__c =&apos;FP-MULT-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-L&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-T&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-C&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CL&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-LT&apos; ,TEXT((Capacity__c)/1000),&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENERGY PRICE ADDER CONTRACT PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Signature__c</fullName>
        <formula>IF(Account.Supplier__r.Supplier_Code__c=&apos;IPH&apos;,
(&apos;Confirmation:&apos;)


&amp; BR() &amp;
(&apos; THANK YOU for choosing Homefield Energy!&apos;)
&amp; BR() &amp;

(&apos;We have received your signed contract and it has been fully executed. Homefield Energy will now be coordinating your enrollment with your local utility to ensure a smooth transition for your organization.&apos;)
&amp;BR() &amp;

(&apos;Homefield Energy will begin or renew supplying your energy needs as of June 2017. The actual switch date will be determined by the utility and based on the day they read your meter for that month. You will receive your first invoice approximately one month later.&apos;) 
&amp; BR() &amp;

(&apos;If you have questions or concerns, please contact our Homefield Energy Customer Care Team at 888-451-3911 Option 3 or email us at BusinessCare@dynegy.com &apos;) &amp; BR() &amp;


(&apos; Again, thank you for choosing Homefield Energy. We look forward to servicing your energy needs.&apos;) &amp; BR() &amp;

(&apos;Customer Care Team&apos;) 
&amp; BR() &amp;

(&apos;T 888-451-3911x3 - F 888.354.9837 – businesscare@dynegy.com&apos;)&amp; BR() &amp;
(&apos;www.Dynegy.com www.HOMEFIELDENERGY.com&apos;),


IF(Account.Supplier__r.Supplier_Code__c=&apos;DES&apos;,
(&apos;Confirmation:&apos;)
&amp; BR() &amp;

(&apos;THANK YOU for choosing Dynegy Energy Services!&apos;) 
&amp; BR() &amp;

(&apos;We have received your signed contract and it has been fully executed. Dynegy Energy Services will now be coordinating your enrollment with your local utility to ensure a smooth transition for your organization.&apos;)
&amp; BR() &amp;

(&apos;Dynegy Energy Services will begin supplying your energy needs as of Month YYYY. The actual switch date will be determined by the utility and based on the day they read your meter for that month. You will receive your first invoice approximately one month later.&apos;) 
&amp; BR() &amp;

(&apos;If you have questions or concerns, please contact our Dynegy Energy Services Customer Care Team at 844-441-0716 Option 3 or email us at DESBusinessCare@dynegy.com &apos;) &amp; BR() &amp;


(&apos; Again, thank you for choosing Dynegy Energy Services.  We look forward to servicing your energy needs.&apos;) &amp; BR() &amp;

(&apos;Customer Care Team&apos;) 
&amp; BR() &amp;

(&apos;DYNEGY ENERGY SERVICES w T 844-441-0716x3 w F 888.354.9837 w DESBusinesCare@dynegy.com w www.DYNEGYENERGYSERVICES.com&apos;) 
&amp; BR() &amp;

(&apos;Please update your records with the new contact information above!&apos;) 
&amp; BR() &amp;

(&apos;Please consider the environment before printing this e-mail.&apos;),

&apos;No Value&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email-Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>EndDate + 1</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Contract_Price__c</fullName>
        <formula>IF(Product_Name__c = &apos;FP-ONE&apos;,TEXT((Energy__c +Basis__c +Shaping__c +Swing__c +Margin__c +Index_Margin__c +Capacity__c +Utility_Loss__c +ISO_NITS__c 
+ISO_Other_Trans__c +ISO_ARR__c +ISO_Ancillaries__c +ISO_Losses__c +ISO_Op_Reserve_RSG__c +ISO_Cost_Recovery__c +ISO_Inadvertant__c +ISO_SSR_RMR__c 
+ISO_Admin__c +ISO_FTR__c +RPS__c +Vol_Rec__c +Broker_Fee__c +Municipality_Fee__c +Marketing_Cost__c +Default_Risk__c +UCB_POR__c +Holding_Cost__c 
+Tax__c)/1000) 

,IF( Product_Name__c = &apos;FP-ONE-PT-C&apos;, TEXT((Energy__c +Basis__c +Shaping__c +Swing__c +Margin__c +Index_Margin__c +Utility_Loss__c +ISO_NITS__c +ISO_Other_Trans__c +ISO_ARR__c +ISO_Ancillaries__c +ISO_Losses__c +ISO_Op_Reserve_RSG__c +ISO_Cost_Recovery__c +ISO_Inadvertant__c +ISO_SSR_RMR__c +ISO_Admin__c +ISO_FTR__c +RPS__c +Vol_Rec__c +Broker_Fee__c +Municipality_Fee__c +Marketing_Cost__c +Default_Risk__c +UCB_POR__c 
+Holding_Cost__c +Tax__c)/1000), 

IF( Product_Name__c =&apos;FP-MULT&apos;|| Product_Name__c =&apos;FP-MULT-PT-C&apos;|| Product_Name__c = &apos;FP-MULT-PT-L&apos;|| Product_Name__c = &apos;FP-MULT-PT-T&apos;|| Product_Name__c = &apos;FP-MULT-PT-CL&apos;|| Product_Name__c = &apos;FP-MULT-PT-CLT&apos;|| Product_Name__c = &apos;FP-MULT-PT-LT&apos;|| Product_Name__c =&apos;FP-MULT-PT-CT&apos;,TEXT((Energy__c +Basis__c +Shaping__c +Swing__c +Margin__c +Broker_Fee__c +Municipality_Fee__c +Marketing_Cost__c +Default_Risk__c +UCB_POR__c +Holding_Cost__c +Tax__c)/1000), &apos;N/A&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Contract Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_On_Off_Peak__c</fullName>
        <formula>Energy__c  +  Basis__c  +  Shaping__c  +  Swing__c  +  Default_Risk__c  +  Holding_Cost__c  +  Tax__c  +   Contract_Marketing_Cost__c  +  Contract_Margin__c  +  Contract_Index_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy (On/Off Peak)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy__c</fullName>
        <label>Energy</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <label>Enrollment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Request_Date__c</fullName>
        <label>Enrollment Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Stage__c</fullName>
        <label>Enrollment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to Enroll</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evergreen_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evergreen Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Footer_Logo__c</fullName>
        <formula>IF(Supplier__r.Supplier_Code__c = &apos;DESE&apos;, &apos;/servlet/servlet.FileDownload?file=015150000058XJP&apos;, &apos;/servlet/servlet.FileDownload?file=015150000058XJQ&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Footer Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Logo__c</fullName>
        <formula>IF(Supplier__r.Supplier_Code__c  = &apos;IPH&apos;, &apos;/servlet/servlet.FileDownload?file=015150000058XJQ&apos;, &apos;/servlet/servlet.FileDownload?file=015150000058XJP&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Header Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_Cost__c</fullName>
        <label>Holding Cost</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_ARR__c</fullName>
        <label>ISO-ARR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Admin__c</fullName>
        <label>ISO-Admin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Ancillaries__c</fullName>
        <label>ISO-Ancillaries</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Cost_Recovery__c</fullName>
        <label>ISO-Cost Recovery</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_FTR__c</fullName>
        <label>ISO-FTR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Inadvertant__c</fullName>
        <label>ISO-Inadvertant</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Losses__c</fullName>
        <label>ISO-Losses</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_NITS__c</fullName>
        <label>ISO-NITS</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Op_Reserve_RSG__c</fullName>
        <label>ISO-Op Reserve-RSG</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Other_Trans__c</fullName>
        <label>ISO-Other Trans</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_SSR_RMR__c</fullName>
        <label>ISO-SSR-RMR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Index_Margin__c</fullName>
        <label>Index Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interval_Usage__c</fullName>
        <label>Interval Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interval</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Contract_Number__c</fullName>
        <description>Contract number from Legacy Systems</description>
        <externalId>true</externalId>
        <label>Legacy Contract Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Contract_Type__c</fullName>
        <description>This field is created during the iAve conversion</description>
        <label>Legacy Contract Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <formula>Account.Legal_Entity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Notice_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Notice Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LodeStar_End_Date__c</fullName>
        <description>The projected End Date of The LoadStar Billing</description>
        <formula>DATE(
    YEAR(StartDate) +
    FLOOR((ContractTerm + MONTH(StartDate)) / 12) -
    IF (MOD(MONTH(StartDate) + ContractTerm, 12) = 0,
        1,
        0),

    MOD((ContractTerm + MONTH(StartDate) - 1), 12) + 1,

    1
) - 1</formula>
        <inlineHelpText>The projected End Date of the LoadStar Billing.
DATE(
YEAR(StartDate) +
FLOOR((ContractTerm + MONTH(StartDate)) / 12) -
IF (MOD(MONTH(StartDate) + ContractTerm, 12) = 0,
1,
0),

MOD((ContractTerm + MONTH(StartDate) - 1), 12) + 1,

1
) - 1</inlineHelpText>
        <label>LodeStar End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LodeStar_Identifier__c</fullName>
        <description>A unique Field for Lode Star to Identify the Contracts</description>
        <label>LodeStar Identifier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LodeStar_Start_Date__c</fullName>
        <description>The projected Start Date of LodeStar Billing</description>
        <formula>DATE(
    /* YEAR */
    IF(MONTH(StartDate) = 12, YEAR(StartDate)+1,YEAR(StartDate))
    ,
    /* MONTH */
    IF(MONTH(StartDate) = 12,1,MONTH(StartDate)+1)
    ,
    /*DAY - THE FIRST - ALWAYS */
    1
)</formula>
        <inlineHelpText>The projected Start Date of LodeStar Billing.</inlineHelpText>
        <label>LodeStar Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lodestar_Sent_Date__c</fullName>
        <label>Lodestar Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MISO_PJM_Transmission_Price__c</fullName>
        <formula>ISO_NITS__c  +  ISO_Other_Trans__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MISO/PJM Transmission Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Over_Market__c</fullName>
        <formula>ROUND(Retail_Quote__r.Total_Quote_MWh__c*Retail_Quote__r.Contract_Margin__c, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field:  ROUND(Retail_Quote__r.Total_Quote_MWh__c*Retail_Quote__r.Contract_Margin__c, 5)</inlineHelpText>
        <label>Margin / Market</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Cost__c</fullName>
        <label>Marketing Cost</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Muni_Fee__c</fullName>
        <formula>Contract_Municipality_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Muni-Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Municipality_Fee__c</fullName>
        <label>Municipality Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OFF_PEAK_CONTRACT_PRICE__c</fullName>
        <formula>IF( Product_Name__c = &apos;FP-ONOFF&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-T&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-C&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CL&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-L&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-LT&apos;, TEXT( VALUE(SUBSTITUTE( Retail_Quote__r.Contract_Energy_Off_PK__c, &quot;$&quot;, &quot;&quot;))),&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OFF PEAK CONTRACT PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON_PEAK_contract_price__c</fullName>
        <formula>IF( Product_Name__c = &apos;FP-ONOFF&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-T&apos;|| Product_Name__c = &apos;FP-ONOFF-PT-C&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CL&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CT&apos;|| Product_Name__c = &apos;FP-ONOFF-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-L&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-LT&apos;, TEXT( VALUE(SUBSTITUTE(Retail_Quote__r.Contract_Energy_On_PK__c, &quot;$&quot;, &quot;&quot;))),&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ON PEAK contract price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPCO_Service_Territory__c</fullName>
        <formula>Supplier__r.Supplier_DUNS__c +&apos;-&apos;+ text(Service_Territory__c)</formula>
        <label>OPCO_Service_Territory_Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Buffer_Days__c</fullName>
        <label>Opt Out Buffer Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out_End_Date__c</fullName>
        <formula>IF(  NOT(ISBLANK( Opt_Out_Start_Date__c ))  , Opt_Out_Start_Date__c + 21 +  Opt_Out_Buffer_Days__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt Out End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Start_Date__c</fullName>
        <label>Opt Out Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Contract for Amendment</description>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>ParentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Option__c</fullName>
        <label>Price Option</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Index_Adder_Total_Per_KWH__c</fullName>
        <label>Total Energy Adder</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>